--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,10 +7,17 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="kr.hs.emirim.dok96.fileio.MainActivity">
+    tools:context="kr.hs.emirim.dok96.fileio.MainActivity"
+    android:orientation="vertical">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <Button
+        android:id="@+id/but_output"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:text="@string/but_out" />
+    <Button
+        android:id="@+id/but_input"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/but_in" />
 </RelativeLayout>
